# aoc2019

./: Cargo.toml
input/: day13.hack
src/: day1.rs  day10.rs  day11.rs  day13.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
src/day1/: error.rs  tests.rs
src/day2/: tests.rs
