[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Brandon Matthews <bmatthews@linkedin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mopa = "0.2.2"
permute = "0.1.0"
num = "0.2.0"
log = "0.4.8"
env_logger = "0.7.1"
